--- a/css/main-layout.css
+++ b/css/main-layout.css
@@ -1,5 +1,5 @@
 .pageLayout {
-    width: 1000px;
+    max-width: 1000px;
     margin: auto;
     display: grid;
     grid-template-columns: 200px 1fr;
