--- a/css/navbar.css
+++ b/css/navbar.css
@@ -50,8 +50,7 @@ nav button:hover {
 }
 
 /* ///// NAV BAR - RESPONSIVE ///// */
-@media only screen and (max-width: 374px) {
+/* @media only screen and (max-width: 374px) {
     nav {
-        /* add */
     }
-}
+} */
