--- a/css/product-board.css
+++ b/css/product-board.css
@@ -1,18 +1,94 @@
+main {
+    margin: 100px 25px;
+}
+
+/* ///////////// MAIN - HEADER ///////////// */
+main .header {
+    background-color: wheat;
+    height: 30px;
+    border-bottom: 4px solid black;
+
+    /* FLEXBOX */
+    display: flex;
+    justify-content: center;
+}
+
+main .header section {
+    background-color: lightgray;
+    width: 200px;
+    border: 1px solid black;
+    border-bottom: 1px solid transparent;
+
+    /* FLEXBOX */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+main .header section:hover {
+    cursor: pointer;
+    background-color: gray;
+}
+
+/* ///////////// MAIN - BOARD ///////////// */
+main .productBoard {
+    margin-top: 0px;
+    padding-top: 10px;
+
+    /* GRID */
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 25px;
+}
+
+/* ////// PRODUCT CARDS //////  */
+.card img {
+    height: 150px;
+    max-width: 100%;
+}
+
+.card h2 {
+    font-weight: normal;
+    font-size: 20px;
+    line-height : 30px;
+}
+
+.card h3 {
+    font-size: 14px;
+    line-height: 14px;
+    margin-bottom: 15px;
+    color: red;
+}
+
+.card {
+    /* border: 2px solid black; */
+    border: 1px solid transparent;
+    background-color: white;
+    text-align: center;
+}
+
+.card:hover {
+    cursor: pointer;
+    border: 1px solid lightgray;
+    box-shadow: 0px 3px 3px rgb(0 0 0 / 10%);
+}
+
 /* ///////////// SMALLER SCREENS /////////////  */
 @media only screen and (max-width: 1204px) { /* tablet landscape */
-    main {
+    main .productBoard {
         margin: 25px 25px;
     }
 }
 
 @media only screen and (max-width: 900px) { /* tablet horizontal */
-    main {
+    main .productBoard {
         grid-template-columns: 1fr 1fr;
     }
 }
 
 @media only screen and (max-width: 480px) { /* mobile */
-    main {
+    main .productBoard {
         grid-template-columns: 1fr;
     }
 }
