--- a/css/categories.css
+++ b/css/categories.css
@@ -13,18 +13,27 @@ aside {
 }
 
 aside section {
-    height: 40px;
+    height: 50px;
     width: 100%;
 
     background-color: lightgray;
     border: 1px solid black;
-    
+
     /* FLEXBOX */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+aside button {
+
+  width: 100%;
+  height: 40px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border: 0px solid;
+
+}
 aside section:hover {
     background-color: gray;
     cursor: pointer;
