--- a/css/categories.css
+++ b/css/categories.css
@@ -25,15 +25,17 @@ aside section {
     align-items: center;
 }
 
-aside button {
+button {
 
   width: 100%;
   height: 40px;
   margin-top: 5px;
   margin-bottom: 5px;
-  border: 0px solid;
+  border-width: 0px;
+  background-color:white;
 
 }
+
 aside section:hover {
     background-color: gray;
     cursor: pointer;
