--- a/css/categories.css
+++ b/css/categories.css
@@ -12,31 +12,32 @@ aside {
     align-items: center;
 }
 
-aside section {
+.category-option {
+
     height: 50px;
     width: 100%;
 
-    background-color: lightgray;
+    background-color: white;
     border: 1px solid black;
 
     /* FLEXBOX */
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
 
-button {
+.cudlik {
 
-  width: 100%;
+  width: 100px;
   height: 40px;
   margin-top: 5px;
   margin-bottom: 5px;
-  border-width: 0px;
-  background-color:white;
+  border-width: 5px;
+  background-color: white;
 
 }
 
-aside section:hover {
+aside .category-option:hover {
     background-color: gray;
     cursor: pointer;
 }
