--- a/css/categories.css
+++ b/css/categories.css
@@ -13,12 +13,12 @@ aside {
 }
 
 aside section, aside div {
-    height: 40px;
+    height: 50px;
     width: 100%;
 
-    background-color: lightgray;
+    background-color: white;
     border: 1px solid black;
-    
+
     /* FLEXBOX */
     display: flex;
     justify-content: center;
@@ -26,8 +26,27 @@ aside section, aside div {
 }
 
 aside div button {
-    width: 100%;
-}  
+    width: 200px;
+    height: 30px;
+    background-color: white;
+    border: 0px;
+    margin: 0px;
+    font-size: 1.4em;
+    padding: 0px;
+
+}
+aside div button:after {
+  display: block;
+  position: absolute;
+  margin-left: 8px;
+  width: 180px;
+  content: '';
+  border-bottom: solid 3px #019fb6;
+  transform: scaleX(0);
+  transition: transform 250ms ease-in-out;
+}
+aside div:hover button:after { transform: scaleX(1); }
+aside div button:after{  transform-origin:  0% 50%; }
 
 aside section:hover {
     background-color: gray;
