--- a/css/product-board.css
+++ b/css/product-board.css
@@ -66,12 +66,14 @@ main .productBoard {
     border: 1px solid transparent;
     background-color: white;
     text-align: center;
+    transition: all .2s ease-in-out;
 }
 
 .card:hover {
     cursor: pointer;
     border: 1px solid lightgray;
     box-shadow: 0px 3px 3px rgb(0 0 0 / 10%);
+    transform: scale(1.02); 
 }
 
 /* ///////////// SMALLER SCREENS /////////////  */
