Dokonceni hrube casti loginpage

--- a/css/general-styles.css
+++ b/css/general-styles.css
@@ -1,6 +1,15 @@
 /* ///////////// GENERAL RULES ///////////// */
 
 
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    /* user-select: none; */
+
+    font-family: sans-serif;
+}
+
 body {
     /* something */
 }
