--- a/css/login.css
+++ b/css/login.css
@@ -28,7 +28,6 @@ body {
   display: flex;
   min-height: 600px;
   width: 33%;
-  justify-content: center;
   flex-direction: column;
   position: relative;
 }
@@ -52,8 +51,8 @@ body {
 
 }
 .input_box h3 {
-  text-align: center;
-  margin: 5px;
+  margin: 2px;
+  margin-left: 12%;
 }
 .input_box {
   display: flex;
@@ -63,11 +62,12 @@ body {
 }
 .around_input {
 
-  width: 80%;
+  width: 100%;
   display: flex;
+  flex-direction: column;
   align-self: center;
-  justify-content: center;
-  height: 50px;
+  height: 40px;
+  position: relative;
 }
 .around_input input {
 
@@ -78,6 +78,7 @@ body {
   border-bottom: 3px solid lightgrey;
   outline: none;
   padding-bottom: 0px;
+  align-self: center;
   transition: border-bottom,padding-bottom 0.1s linear;
 }
 .around_input:hover input{
@@ -86,8 +87,9 @@ body {
 }
 .login_buttons_box {
 
-  height: 80px;
+  height: 50px;
   display: flex;
+  margin-top:10px;
   flex-direction: row;
 }
 
@@ -97,7 +99,7 @@ body {
   align-self: center;
   height: 50px;
   width: 140px;
-  margin: 20px auto 20px auto;
+  margin: 5px auto 5px auto;
   font-size: 30px;
   border-radius: 10px;
   border: 40px;
@@ -107,8 +109,8 @@ body {
 .login_buttons_box  button:after {
   display: block;
   position: absolute;
-  margin-left: 0px;
-  width: 120px;
+  margin-left: 8px;
+  width: 118px;
   content: '';
   border-bottom: solid 3px #019fb6;
   transform: scaleX(0);
@@ -116,3 +118,21 @@ body {
 }
 .login_buttons_box  button:hover:after { transform: scaleX(1); }
 .login_buttons_box  button:after{  transform-origin:  0% 50%; }
+
+.error {
+
+
+  background-color: #2F558E;
+  height: 20px;
+  color: white;
+  border-radius: 4px;
+  margin: 4px;
+  padding: 2px 4px 2px 4px;
+  font-size: 10px;
+  font-weight: bold;
+  min-width: 100px;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  display: flex;
+}
