--- a/css/product-board.css
+++ b/css/product-board.css
@@ -13,7 +13,7 @@ main .header {
     justify-content: center;
 }
 
-main .header section {
+main .header button {
     background-color: lightgray;
     width: 200px;
     border: 1px solid black;
@@ -26,7 +26,7 @@ main .header section {
     align-items: center;
 }
 
-main .header section:hover {
+main .header button:hover {
     cursor: pointer;
     background-color: gray;
 }
