--- a/css/cart.css
+++ b/css/cart.css
@@ -1,8 +1,4 @@
 
-* {
-
-    user-select: none;
-}
 .pageLayout {
 
     max-width: 1000px;
@@ -42,6 +38,23 @@
   margin: 15px;
   width: 50px;
   height: 50px;
+  background-color: white;
+  padding: 0px;
+
+}
+.trash-container {
+
+  background-image: url("../media/bin.jpg");
+  background-size: cover;
+  margin: 8px 15px auto auto;
+  height: 30px;
+  width: 20px;
+  transition: 0.05s;
+}
+.trash-container:hover {
+    background-image: url("../media/bin-opened.jpg");
+    cursor: pointer;
+    transition: 0.05s;
 }
 .thumb {
 
