--- a/css/product-board.css
+++ b/css/product-board.css
@@ -1,7 +1,42 @@
 main {
-    margin: 100px 25px;
+    margin: 50px 25px 100px 25px;
 }
+/* ///////////// MAIN - PRICE RANGE SETTER ///////////// */
 
+.price_range_choice {
+
+  width: 80%;
+  align-self: center;
+  justify-content: center;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  align-items: center;
+  margin-bottom: 20px;
+  background-color: lightblue
+}
+.price_range_choice h4 {
+
+  width: 110px;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  margin: 5px;
+}
+.price_range_choice input {
+
+  width: 100px;
+  height: 30px;
+  margin: 5px;
+  text-align: center;
+}
+.price_range_choice button {
+
+  width: 60px;
+  height: 30px;
+  margin: 5px;
+}
 /* ///////////// MAIN - HEADER ///////////// */
 main .header {
     background-color: wheat;
@@ -73,7 +108,7 @@ main .productBoard {
     cursor: pointer;
     border: 1px solid lightgray;
     box-shadow: 0px 3px 3px rgb(0 0 0 / 10%);
-    transform: scale(1.02); 
+    transform: scale(1.02);
 }
 
 /* ///////////// SMALLER SCREENS /////////////  */
