--- a/css/product-board.css
+++ b/css/product-board.css
@@ -19,7 +19,7 @@ main {
 }
 
 main .header button {
-    background-color: gray;
+    background-color: white;
     width: 100%;
     border: 1px solid black;
     border-bottom: 1px solid black;
@@ -33,16 +33,15 @@ main .header button {
 
 main .header button:hover {
     cursor: pointer;
-    background-color: white;
-    border-bottom: 1px solid transparent;
+    /* border-bottom: 1px solid transparent; */
 }
 
 /* ///////////// MAIN - BOARD ///////////// */
 main .productBoard {
     /* background-color: green; */
-    border-bottom: 1px solid black;
+    /* border-bottom: 1px solid black;
     border-right: 1px solid black;
-    border-left: 1px solid black;
+    border-left: 1px solid black; */
 
     margin-top: 0px;
     padding-top: 10px;
